portfolio/portfolio-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata: 
  name: knfolio
  namespace: folio
  labels:
    app: knfolio
  
spec: 
  replicas: 1

  selector: 
    matchLabels: 
      app: knfolio
  
  template: 
    metadata:
      labels:
        app: knfolio

    spec:
      containers: 
      - name: fullstack
        image: cyrof/kn-folio:latest
        imagePullPolicy: Always
        ports: 
        - containerPort: 3000
