portfolio/portfolio-nodePort.yaml
apiVersion: v1
kind: Service
metadata: 
  name: knfolio-service
  namespace: folio

spec: 
  selector: 
    app: knfolio
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30005
