portfolio/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: knfolio-service
  namespace: folio
spec: 
  selector: 
    app: knfolio
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
