portfolio/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knfolio-ingress
  namespace: folio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - knfolio.dev
      secretName: knfolio-tls
  rules:
    - host: knfolio.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knfolio-service
                port:
                  number: 3000
